--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: item-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: admin
+    password: admin    
 #
 ## 启动参数 --server.port 可以覆盖yml配置
 #server:
