--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -4,8 +4,8 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: admin
-    password: admin    
+    username: guest
+    password: guest    
 #
 ## 启动参数 --server.port 可以覆盖yml配置
 #server:
