--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -4,8 +4,8 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: admin
-    password: admin     
+    username: guest
+    password: guest     
 # 
 server:
   port: 8201  
